Fix code wrapping
Now there’s no scrolling in code blocks.

--- a/Grump.css
+++ b/Grump.css
@@ -21,6 +21,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 code {
   overflow: auto;
+  word-break:break-all;
+  word-break:break-word;
 }
 
 table {
@@ -171,7 +173,8 @@ body {
     overflow: auto; }
 
   img, pre, blockquote, table, figure, p {
-    page-break-inside: avoid; }
+    page-break-inside: avoid; 
+  }
 
   #wrapper {
     background: #fff;
